--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 
     <div class="menu container">
       <a href="index.html" class="logo custom-logo">
-        <img src="images/logo.png" alt="" />
+        <img src="./images/logo.png" alt="" />
       </a>
       <input type="checkbox" id="menu" />
       <label for="menu">
-        <img src="images/menu.png" class="menu-icono" alt="" />
+        <img src="./images/menu.png" class="menu-icono" alt="" />
       </label>
       <nav class="navbar">
         <ul>
