--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 
     <div class="menu container">
       <a href="index.html" class="logo custom-logo">
-        <img src="./images/logo.png" alt="" />
+        <img src="images/logo.png" alt="" />
       </a>
       <input type="checkbox" id="menu" />
       <label for="menu">
-        <img src="./images/menu.png" class="menu-icono" alt="" />
+        <img src="images/menu.png" class="menu-icono" alt="" />
       </label>
       <nav class="navbar">
         <ul>
@@ -120,12 +120,12 @@
         </div>
         <div class="media-item video">
           <video controls>
-            <source src="images/video1.mp4" type="video/mp4" />
+            <source src="images/video1.mov" type="video/mp4" />
           </video>
         </div>
         <div class="media-item video">
           <video controls>
-            <source src="images/video3.mp4" type="video/mp4" />
+            <source src="images/video3.mov" type="video/mp4" />
           </video>
         </div>
       </div>
@@ -163,7 +163,7 @@
       <span>TIRO DEPORTIVO</span>
       <h2>ANIMATE A VIVIR ESTA GRAN EXPERIENCIA</h2>
 
-      <div class="testimonial-content container">
+      <!-- <div class="testimonial-content container">
         <div class="testimonial-1">
           <img class="face" src="images/imagen1.jpg" alt="" />
 
@@ -180,7 +180,7 @@
             hace que sigas.
           </p>
         </div>
-      </div>
+      </div> -->
     </section>
 
     <section class="information container">
