--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <span>BIENVENIDOS</span>
           <h1>CLUB DE TIRO DEPORTIVO RUTA C</h1>
         </div>
-        <p class='parrafo'>
+        <p class='paragraph'>
           Formar deportistas de alto rendimiento con proyección de
           participación en eventos nacionales e internacionales, regidos por
           principios éticos y de integridad que fortalezcan su valor como
