--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
       </div> -->
     </section>
 
-    <section class="information container">
+    <section class="information container mobile-column">
       <div class="information-img">
         <video controls class="f2">
           <source src="images/video2.mp4" type="video/mp4" />
